# type-of-html

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  Readme.md  default.nix  nixpkgs.nix  release.nix  shell.nix  type-of-html.cabal  type-of-html.nix
bench/: Alloc.hs  Bench.hs  Big.hs  Blaze.hs  Compilation.hs  ExampleBlaze.hs  ExampleTypeOfHtml.hs  Main.hs  Medium.hs  Perf.hs  Reduction.hs  Small.hs
bench/Compilation/: X0.hs  X1.hs  X128.hs  X16.hs  X2.hs  X32.hs  X4.hs  X64.hs  X8.hs
src/: Html.hs  Main.hs
src/Html/: Aria.hs  Attribute.hs  ByteString.hs  CPP.hs  Convert.hs  Element.hs  Function.hs  Obsolete.hs  QualifiedDo.hs  Reify.hs  Render.hs  String.hs  Text.hs  Type.hs
src/Html/Element/: Obsolete.hs
src/Html/Type/: Internal.hs
src/Html/Type/Internal/: GHC.hs
test/: Custom.hs  HtmlSpec.hs  Main.hs  Type.hs  Value.hs
