name:                 type-of-html
version:              0.2.1.0
synopsis:             High performance type driven html generation.
description:          This library makes most invalid html documents compile time errors and uses advanced type level features to realise compile time computations.
license:              BSD3
license-file:         LICENSE
author:               Florian Knupfer
maintainer:           fknupfer@gmail.com
copyright:            2017, Florian Knupfer
category:             Language
build-type:           Simple
extra-source-files:   ChangeLog.md
                    , Readme.md
cabal-version:        >=1.10

library
  exposed-modules:    Html
  other-modules:      Html.Type
                    , Html.Element
                    , Html.Function
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  build-depends:      base >= 4.10
                    , text

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  build-depends:      base >= 4.10
                    , type-of-html
                    , hspec
                    , text

benchmark bench
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     bench
  ghc-options:        -Wall -O2
  default-language:   Haskell2010
  build-depends:      base >= 4.10
                    , type-of-html
                    , text
                    , bytestring
                    , blaze-html
                    , criterion