name:                 type-of-html
version:              1.3.2.0
synopsis:             High performance type driven html generation.
description:          This library makes most invalid html documents compile time errors and uses advanced type level features to realise compile time computations.
license:              BSD3
license-file:         LICENSE
author:               Florian Knupfer
maintainer:           fknupfer@gmail.com
homepage:             https://github.com/knupfer/type-of-html
tested-with:          GHC == 8.0.2
                    , GHC == 8.2.2
copyright:            2017, Florian Knupfer
category:             Language, Text, Web, HTML
build-type:           Simple
extra-source-files:   ChangeLog.md
                    , Readme.md
cabal-version:        >=1.10
source-repository     head
   Type: git
   Location: https://github.com/knupfer/type-of-html

library
  exposed-modules:    Html
                    , Html.Type
                    , Html.Convert
                    , Html.Element
                    , Html.Attribute
  other-modules:      Html.Type.Internal
                    , Html.CPP
                    , Html.Reify
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:      base >= 4.9 && < 5
                    , text
                    , bytestring
                    , ghc-prim
                    , double-conversion

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  ghc-options:        -Wall -O0
  default-language:   Haskell2010
  build-depends:      base >= 4.9 && < 5
                    , type-of-html
                    , QuickCheck
                    , hspec

benchmark bench
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Small
                    , Medium
                    , Big
                    , Blaze
  hs-source-dirs:     bench
  ghc-options:        -Wall -O2
  default-language:   Haskell2010
  build-depends:      base >= 4.9 && < 5
                    , type-of-html
                    , text
                    , bytestring
                    , blaze-html
                    , criterion
                    , QuickCheck